--- a/src/app/features/shop/filter-price/filter-price.component.html
+++ b/src/app/features/shop/filter-price/filter-price.component.html
@@ -66,7 +66,7 @@
     >
   </div>
   <div
-    *ngIf="query && query.trim() !== ''"
+    *ngIf="query && query.trim() !== '' && isfilterColSizeNatPrice === false"
     class="filter-on-url d-flex align-items-center"
   >
     <span class="badge text-bg-light" style="cursor: pointer; font-size: 14px"
@@ -79,7 +79,7 @@
     style="width: 200px; font-size: 15px"
     aria-label="Default select example"
     (change)="onFilterPriceChange($event)"
-    [value]="selectedSort"
+    [ngModel]="selectedSort"
   >
     <option value="-1" selected>Mặc định</option>
     <option *ngFor="let filter of filterprice" [value]="filter.value">
