hoang push button cart navbar

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -69,7 +69,11 @@
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" (click)="checkUser()" style="color: #fff">
+              <a
+                class="nav-link"
+                (click)="checkUser()"
+                style="color: #fff; cursor: pointer"
+              >
                 <div class="" style="position: relative; display: inline-flex">
                   <i class="fa-solid fa-cart-shopping"></i>
                   <div class="cart-number-notify">
