--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -46,11 +46,11 @@
                 >Sản phẩm</a
               >
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="javascript:void(0)" style="color: #fff"
                 >Khuyến mãi</a
               >
-            </li>
+            </li> -->
             <li class="nav-item">
               <div class="dropdown" style="color: #fff">
                 <p
@@ -61,10 +61,9 @@
                   Danh mục
                 </p>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Áo thun</a></li>
-                  <li><a class="dropdown-item" href="#">Áo polo</a></li>
-                  <li><a class="dropdown-item" href="#">Quần jeans</a></li>
-                  <li><a class="dropdown-item" href="#">Áo sơ mi</a></li>
+                    <li *ngFor="let category of categories">
+                    <a class="dropdown-item" [routerLink]="['/shop']" [queryParams]="{ cat_Id: category.id }">{{category.name}}</a>
+                  </li>
                 </ul>
               </div>
             </li>
