--- a/src/app/features/auth/sign-up/sign-up.component.html
+++ b/src/app/features/auth/sign-up/sign-up.component.html
@@ -86,7 +86,7 @@
                             <label for="password" class="form-label">Mật khẩu</label>
                             <div class="password-container">
                                 <input class="form-control" id="password"
-                                    [type]="isPasswordVisible ? 'text' : 'password'" formControlName="password">
+                                    [type]="isPasswordVisible ? 'text' : 'password'" formControlName="password" (paste)="preventPaste($event)">
                                 <a (click)="togglePasswordVisibility()" class="eye-icon-password">
                                     <p>{{PasswordVisible}}</p>
                                 </a>
@@ -104,7 +104,7 @@
                             <label for="re_enter_password" class="form-label">Nhập lại mật khẩu</label>
                             <div class="password-container">
                                 <input class="form-control" id="re_enter_password"
-                                    [type]="isReInputPasswordVisible ? 'text' : 'password'" formControlName="re_password">
+                                    [type]="isReInputPasswordVisible ? 'text' : 'password'" formControlName="re_password" (paste)="preventPaste($event)">
                                 <a (click)="toggleReInputPasswordVisibility()" class="eye-icon-password">
                                     <p>{{ReInputPasswordVisible}}</p>
                                 </a>
@@ -115,7 +115,11 @@
                             </div>
                         </div>
 
-                        <button type="submit" class="btn btn-dark w-100 mt-3" [disabled]="sign_up_F.invalid">Đăng Ký</button>
+                        <button type="submit" class="btn btn-dark w-100 mt-3" [disabled]="sign_up_F.invalid || isLoading">
+                            <span *ngIf="isLoading" class="spinner-border spinner-border-sm" role="status"
+                                aria-hidden="true"></span>
+                            <span *ngIf="!isLoading">Đăng ký</span>
+                        </button>
                     </form>
                 </div>
             </div>
