--- a/src/app/features/personal_information/change-password/change-password.component.css
+++ b/src/app/features/personal_information/change-password/change-password.component.css
@@ -49,6 +49,13 @@
     color: #184AFA;
 }
 
+small {
+    display: block;
+    margin-top: 4px;
+    color: #F03B13;
+    font-size: 12px;
+}
+
 /* DT */
 @media (max-width: 767px) {
     .record-container {
