--- a/src/app/features/personal_information/address-book/address-book.component.css
+++ b/src/app/features/personal_information/address-book/address-book.component.css
@@ -47,7 +47,6 @@
     font-size: 16px;
     padding: 8px 16px;
     box-shadow: 0 0 2px rgba(0, 0, 0, 0.3);
-    margin-bottom: 24px;
 }
 
 .name-infor {
@@ -84,6 +83,17 @@
 .btn-disabled {
     opacity: 0.6; /* Giảm độ mờ */
     pointer-events: none; /* Ngăn chặn các sự kiện chuột */
+}
+
+small {
+    display: block;
+    margin-top: 4px;
+    color: #F03B13;
+    font-size: 12px;
+}
+
+.mb-24 {
+    margin-bottom: 24px;
 }
 
 /* DT */
