--- a/src/app/features/personal_information/change-password/change-password.component.html
+++ b/src/app/features/personal_information/change-password/change-password.component.html
@@ -1,3 +1,5 @@
+<!-- Toast sẽ hiển thị ở đây trong 1s, mặc định là top-right -->
+<p-toast [life]="1000"></p-toast>
 <app-header />
 <div class="row personal-info-container mb-5 mx-auto">
     <div class="col-lg-3 d-none d-lg-block">
@@ -23,7 +25,7 @@
             <div class="divided-section-top mx-auto"></div>
             <div class="row mt-4">
                 <div class="col-md-7 col-infor">
-                    <form action="">
+                    <form [formGroup]="changePassword_F" (submit)="changePassword()">
                         
                         <!-- Field: Old password -->
                         <div class="row mb-4">
@@ -31,10 +33,16 @@
                                 <label for="old-password" class="form-label d-block m-0">Mật khẩu hiện tại</label>
                             </div>
                             <div class="col-8 password-container">
-                                <input [type]="isPasswordVisible ? 'text' : 'password'" class="form-control" id="old-password" name="old-password">
+                                <input [type]="isPasswordVisible ? 'text' : 'password'" class="form-control" id="old-password" formControlName="old_password" (paste)="preventPaste($event)">
                                 <a (click)="togglePasswordVisibility()" class="eye-icon-password">
                                     <p>{{PasswordVisible}}</p>
                                 </a>
+                                <div *ngIf="changePassword_F['controls']['old_password'].dirty && changePassword_F['controls']['old_password'].errors">
+                                    <small *ngIf="changePassword_F['controls']['old_password'].errors['required']">Mật khẩu không được bỏ trống!</small>
+                                    <small *ngIf="changePassword_F['controls']['old_password'].errors['minlength']">Mật khẩu phải chứa tối thiểu 8 kí tự!</small>
+                                    <small *ngIf="changePassword_F['controls']['old_password'].errors['maxlength']">Mật khẩu chỉ chứa tối đa 20 kí tự!</small>
+                                    <small *ngIf="changePassword_F['controls']['old_password'].errors['pattern']">Mật khẩu phải chứa chữ hoa, chữ thường và kí tự khác!</small>
+                                </div>
                             </div>
                         </div>
 
@@ -44,10 +52,16 @@
                                 <label for="new-password" class="form-label d-block m-0">Mật khẩu mới</label>
                             </div>
                             <div class="col-8 password-container">
-                                <input [type]="isNewPasswordVisible ? 'text' : 'password'" class="form-control" id="new-password" name="new-password">
+                                <input [type]="isNewPasswordVisible ? 'text' : 'password'" class="form-control" id="new-password" formControlName="new_password" (paste)="preventPaste($event)">
                                 <a (click)="toggleNewPasswordVisibility()" class="eye-icon-password">
                                     <p>{{NewPasswordVisible}}</p>
                                 </a>
+                                <div *ngIf="changePassword_F['controls']['new_password'].dirty && changePassword_F['controls']['new_password'].errors">
+                                    <small *ngIf="changePassword_F['controls']['new_password'].errors['required']">Mật khẩu không được bỏ trống!</small>
+                                    <small *ngIf="changePassword_F['controls']['new_password'].errors['minlength']">Mật khẩu phải chứa tối thiểu 8 kí tự!</small>
+                                    <small *ngIf="changePassword_F['controls']['new_password'].errors['maxlength']">Mật khẩu chỉ chứa tối đa 20 kí tự!</small>
+                                    <small *ngIf="changePassword_F['controls']['new_password'].errors['pattern']">Mật khẩu phải chứa chữ hoa, chữ thường và kí tự khác!</small>
+                                </div>
                             </div>
                         </div>
 
@@ -57,21 +71,29 @@
                                 <label for="re-new-password" class="form-label d-block m-0">Nhập lại mật khẩu mới</label>
                             </div>
                             <div class="col-8 password-container">
-                                <input [type]="isReInputNewPasswordVisible ? 'text' : 'password'" class="form-control" id="re-new-password" name="re-new-password">
+                                <input [type]="isReInputNewPasswordVisible ? 'text' : 'password'" class="form-control" id="re-new-password" formControlName="re_password" (paste)="preventPaste($event)">
                                 <a (click)="toggleReInputNewPasswordVisibility()" class="eye-icon-password">
                                     <p>{{ReInputNewPasswordVisible}}</p>
                                 </a>
+                                <div *ngIf="changePassword_F['controls']['re_password'].dirty && changePassword_F['controls']['re_password'].errors">
+                                    <small *ngIf="changePassword_F['controls']['re_password'].errors['required']">Trường này không được bỏ trống!</small>
+                                    <small *ngIf="changePassword_F['controls']['re_password'].errors['mustMatch']">Mật khẩu không khớp!</small>
+                                </div>
                             </div>
                         </div>
 
-                        <button type="submit" class="btn btn-dark w-100 mt-3">Lưu thay đổi</button>
+                        <button type="submit" class="btn btn-dark w-100 mt-3" [disabled]="changePassword_F.invalid || isLoading">
+                            <span *ngIf="isLoading" class="spinner-border spinner-border-sm" role="status"
+                                aria-hidden="true"></span>
+                            <span *ngIf="!isLoading">Lưu thay đổi</span>
+                        </button>
                     </form>
                 </div>
                 <div class="col-1 divided-section d-none d-md-block"></div>
                 <div class="ms-4 col-md-4 d-flex align-items-center justify-content-center col-avatar">
                     <div class="d-flex align-items-center flex-column">
                         <div class="avatar">
-                            <img width="100%" src="../../../../assets/images/record/avtar_temp.webp" alt="avatar"
+                            <img width="100%" [src]="avatarUrl || '../../../../assets/images/record/avatar.png'" alt="avatar"
                                 class="right-hand-side-avatar">
                         </div>
                         <p class="fw-bold mt-4 opacity-75 label-name">Võ Quang Đăng Khoa</p>
