--- a/src/app/shared/components/sidebar-personal-info/sidebar-personal-info.component.html
+++ b/src/app/shared/components/sidebar-personal-info/sidebar-personal-info.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex align-items-center mb-3">
-    <img class="left-hand-side-avatar me-4" src="../../../../assets/images/record/avtar_temp.webp" alt="avatar">
-    <p class="personal-name m-0">Võ Quang Đăng Khoa</p>
+    <img class="left-hand-side-avatar me-4" [src]="avatarUrl || '../../../../assets/images/record/avatar.png'" alt="avatar">
+    <p class="personal-name m-0">{{fullname}}</p>
 </div>
 
 <div class="d-flex align-items-center mb-2">
